manifest-files/demo-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: example-pod
  name: example-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: example-pod
